--- a/lotto6_45/collection.ipynb
+++ b/lotto6_45/collection.ipynb
@@ -12,21 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 3,
    "source": [
     "import pandas as pd\n",
     "import requests\n",
     "import re\n",
     "from bs4 import BeautifulSoup\n",
     "from lib.progress_bar import progress_bar\n",
-    "import json"
+    "import json\n",
+    "import sqlite3"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "source": [
     "lotto_result_url = \"https://www.dhlottery.co.kr/gameResult.do?method=byWin\"\n",
     "lotto_result_draw = lotto_result_url + \"&drwNo=\"\n",
@@ -271,28 +272,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "source": [
-    "def rawToDB(draws, db_path):\n",
-    "    pass"
+    "#### TEMP #####\n",
+    "draws = []\n",
+    "stores = []\n",
+    "with open(\"../stores.json\", \"r\") as file:\n",
+    "    stores = json.load(file)\n",
+    "with open(\"../draws.json\", \"r\") as file:\n",
+    "    draws = json.load(file)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "source": [
-    "db_path = \"draws.db\""
+    "sql_draw_create = \"CREATE TABLE IF NOT EXISTS `DRAWS`(turn int, num_1 int, num_2 int, num_3 int, num_4 int, num_5 int, num_6 int, num_bonus int)\"\n",
+    "sql_draw = \"INSERT INTO `DRAWS`(`turn`, `num_1`, `num_2`, `num_3`, `num_4`, `num_5`, `num_6`, `num_bonus`) \" \\\n",
+    "            \"VALUES(?, ?, ?, ?, ?, ?, ?, ?)\"\n",
+    "sql_winner_create = \"CREATE TABLE IF NOT EXISTS `WINNERS`(turn int, winner_1 int, winner_2 int, winner_3 int, winner_4 int, winner_5 int)\"\n",
+    "sql_winner = \"INSERT INTO `WINNERS`(`turn`, `winner_1`, `winner_2`, `winner_3`, `winner_4`, `winner_5`) VALUES(?, ?, ?, ?, ?, ?)\"\n",
+    "sql_prize_create = \"CREATE TABLE IF NOT EXISTS `PRIZES`(turn int, prize_1 int, prize_2 int, prize_3 int, prize_4 int, prize_5 int)\"\n",
+    "sql_prize = \"INSERT INTO `PRIZES`(`turn`, `prize_1`, `prize_2`, `prize_3`, `prize_4`, `prize_5`) VALUES(?, ?, ?, ?, ?, ?)\"\n",
+    "sql_store_create = \"CREATE TABLE IF NOT EXISTS `STORES`(idx int, turn int, name varchar(255), auto BOOLEAN, firstPrize BOOLEAN, address varchar(255))\"\n",
+    "sql_store = \"INSERT INTO `STORES`(`idx`, `turn`, `name`, `auto`, `firstPrize`, `address`) VALUES(?, ?, ?, ?, ?, ?)\""
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "source": [
-    "rawToDB(draws, db_path)"
+    "def rawToDB(draws, stores, db_path):\n",
+    "    con = sqlite3.connect(db_path)\n",
+    "    cur = con.cursor()\n",
+    "\n",
+    "    cur.execute(sql_draw_create)\n",
+    "    cur.execute(sql_winner_create)\n",
+    "    cur.execute(sql_prize_create)\n",
+    "    cur.execute(sql_store_create)\n",
+    "\n",
+    "    for draw_info in draws:\n",
+    "        draw = draw_info[\"draw\"]\n",
+    "        nums = draw_info[\"nums\"]\n",
+    "        winners = draw_info[\"winners\"]\n",
+    "        prizes = draw_info[\"price\"]\n",
+    "\n",
+    "        data = tuple([draw] + [int(n) for n in nums])\n",
+    "        cur.execute(sql_draw, data)\n",
+    "        data = tuple([draw] + [int(n) for n in winners])\n",
+    "        cur.execute(sql_winner, data)\n",
+    "        data = tuple([draw] + [int(n) for n in prizes])\n",
+    "        cur.execute(sql_prize, data)\n",
+    "    row_idx = 0\n",
+    "    for stores_info in stores:\n",
+    "        draw = stores_info[\"draw\"] \n",
+    "        for i in stores_info[\"first\"]:\n",
+    "            data = tuple([row_idx, draw, str(i[0]), \\\n",
+    "                1 if str(i[1]).strip() == \"자동\" else 0 \n",
+    "                , 1, str(i[-1])])\n",
+    "            cur.execute(sql_store, data)\n",
+    "            row_idx += 1\n",
+    "        for i in stores_info[\"second\"]:\n",
+    "            data = tuple([row_idx, draw, str(i[0]), None, 0, str(i[-1])])\n",
+    "            cur.execute(sql_store, data)\n",
+    "            row_idx += 1\n",
+    "    con.commit()\n",
+    "    con.close()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "source": [
+    "db_path = \"lottery.db\"\n",
+    "rawToDB(draws, stores, db_path)"
    ],
    "outputs": [],
    "metadata": {}
