--- a/lotto6_45/collection.ipynb
+++ b/lotto6_45/collection.ipynb
@@ -149,7 +149,7 @@
    "cell_type": "code",
    "execution_count": 191,
    "source": [
-    "with open(\"../draws.json\", \"w\") as outfile: \n",
+    "with open(\"draws.json\", \"w\") as outfile: \n",
     "    json.dumps(draws, indent = 4)  \n",
     "    json.dump(draws, outfile, indent = 4)"
    ],
@@ -263,7 +263,7 @@
    "cell_type": "code",
    "execution_count": 227,
    "source": [
-    "with open(\"../stores.json\", \"w\") as outfile: \n",
+    "with open(\"stores.json\", \"w\") as outfile: \n",
     "    json.dumps(locations, indent = 4)  \n",
     "    json.dump(locations, outfile, indent = 4)"
    ],
@@ -274,12 +274,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "source": [
-    "#### TEMP #####\n",
     "draws = []\n",
     "stores = []\n",
-    "with open(\"../stores.json\", \"r\") as file:\n",
+    "with open(\"stores.json\", \"r\") as file:\n",
     "    stores = json.load(file)\n",
-    "with open(\"../draws.json\", \"r\") as file:\n",
+    "with open(\"draws.json\", \"r\") as file:\n",
     "    draws = json.load(file)"
    ],
    "outputs": [],
