--- a/lotto6_45/introduction.ipynb
+++ b/lotto6_45/introduction.ipynb
@@ -10,6 +10,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "The directory is based on South Korea's biggest lottery **Lotto 6/45**."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Setup"
    ],
    "metadata": {}
